--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.1",
     "vue": "^2.5.21",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-click-outside": "^1.0.7",
     "vue-masonry": "^0.11.7",
     "vue-router": "^3.0.1",
