--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "serialize-javascript": ">=2.1.1"
   },
   "eslintConfig": {
     "root": false,
